--- a/1_spprich.Rmd
+++ b/1_spprich.Rmd
@@ -576,7 +576,7 @@ spprich_trans_status_lf <- spprich %>%
 
 
 plot_spprich_shrub <- ggplot(data = spprich_trans_status_lf 
-                              %>%  filter(status == "native" & lifeform == "shrub"), # or status == "nonnative"
+                              %>%  filter(status == "native" & lifeform == "shrub"), 
        aes(x = grass_nonnative*100, 
          y = N_spprich)) + 
       geom_point(aes(color = status, shape = status), size = 3) +
@@ -584,7 +584,7 @@ plot_spprich_shrub <- ggplot(data = spprich_trans_status_lf
   labs(
     #  title = "Linear regression of  total shrub cover by non-native grass cover",
     x = "Non-native grass cover (%)",
-    y = "Species Richness (n)", 
+    y = "Native shrub speices richness (n)", 
    color = "Status", 
    shape = "Status"
     ) +
@@ -597,6 +597,32 @@ plot_spprich_shrub <- ggplot(data = spprich_trans_status_lf
   theme(legend.text=element_text(size = 16))
 
 plot_spprich_shrub
+
+plot_spprich_nng <- ggplot(data = spprich_trans_status_lf 
+                              %>%  filter(status == "nonnative" & lifeform == "grass"), 
+       aes(x = grass_nonnative*100, 
+         y = N_spprich)) + 
+      geom_point(aes(color = status, shape = status), size = 3) +
+  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval
+ # stat_smooth(method = "lm", formula = y ~ poly(x, 2), se = TRUE, color = "black", linewidth = 1) +
+    labs(
+    #  title = "Linear regression of  total shrub cover by non-native grass cover",
+    x = "Non-native grass cover (%)",
+    y = "Non-native grass species richness (n)", 
+   color = "Status", 
+   shape = "Status"
+    ) +
+  scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
+  scale_y_continuous(limits = c(0, 6), breaks = seq(0, 5, by = 1), expand = expansion(mult = c(0, 0.05))) + # Set y-axis limits and breaks
+  theme_bw() +
+  theme(axis.text = element_text(size = 16)) + # axes numbers
+  theme(axis.title = element_text(size = 20)) + # axes titles
+  theme(legend.title=element_text(size = 16)) + 
+  theme(legend.text=element_text(size = 16))
+
+plot_spprich_nng
+
+
 
 ############################################ OLD CODE
 # belt.spprich_total <- belt %>% 
