--- a/scrap_paper.Rmd
+++ b/scrap_paper.Rmd
@@ -10,10 +10,11 @@
   
     theme(axis.text = element_text(size = 16)) + # axes numbers
   theme(axis.title = element_text(size = 20)) + # axes titles
-  theme(legend.title=element_text(size = 60)) + 
+  theme(legend.title=element_text(size = 16)) + 
   theme(legend.text=element_text(size = 16))
   
   
+   #rename(NewNameA = OldName1)
 
 # CANOPY HEIGHT
 ```{r}
@@ -434,3 +435,61 @@ fig.1a <- ggplot(data = cover_byleaftype_wide) +
 
 
 ```
+
+
+
+
+ Multilevel pattern analysis
+ ---------------------------
+
+ Association function: IndVal.g
+ Significance level (alpha): 0.05
+
+ Total number of species: 52
+ Selected number of species: 11 
+ Number of species associated to 1 group: 5 
+ Number of species associated to 2 groups: 2 
+ Number of species associated to 3 groups: 2 
+ Number of species associated to 4 groups: 2 
+
+ List of species associated to each combination: 
+
+ Group 1  #sps.  1 
+                  A      B  stat p.value  
+Lupinus.spp. 0.8571 0.4000 0.586    0.04 *
+
+ Group 4  #sps.  1 
+                   A      B  stat p.value   
+Festuca.myros 0.8444 0.6250 0.726    0.01 **
+
+ Group 5  #sps.  3 
+                            A     B  stat p.value   
+Heteromeles.arbutifolia 1.000 1.000 1.000   0.005 **
+Rhus.ovata              0.863 0.600 0.720   0.010 **
+Rhamnus.ilicifolia      1.000 0.400 0.632   0.010 **
+
+ Group 1+3  #sps.  1 
+                         A      B  stat p.value   
+Hirschfeldia.incana 0.8869 0.7500 0.816   0.005 **
+
+ Group 2+4  #sps.  1 
+                          A      B  stat p.value   
+Centaurea.melitensis 0.9715 0.8667 0.918   0.005 **
+
+ Group 1+3+4  #sps.  1 
+                   A      B  stat p.value   
+Avena.barbata 0.9453 0.9286 0.937   0.005 **
+
+ Group 2+4+5  #sps.  1 
+                  A      B  stat p.value   
+Stipa.lepida 0.9958 0.6500 0.805   0.005 **
+
+ Group 1+2+3+4  #sps.  1 
+                   A      B stat p.value   
+Bromus.rubens 0.9573 0.9429 0.95   0.005 **
+
+ Group 1+3+4+5  #sps.  1 
+                     A      B  stat p.value  
+Bromus.diandrus 0.9836 0.7273 0.846    0.03 *
+---
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
